--- a/WebContent/templates/templatePrincipal.xhtml
+++ b/WebContent/templates/templatePrincipal.xhtml
@@ -33,6 +33,9 @@
 	<h:body>
 		<script type="text/javascript" charset="UTF-8">
 			$.noConflict();
+			localeData_pt_br();
+			ocultarMenu();
+			initTamplete();
 			
 			/*Bloqueia F5 do teclado*/
 // 			$(document).keydown(function(e) {
@@ -62,13 +65,64 @@
 					<br id="quebraUltimoAcesso" />
 					<a href="#" onclick="javascript:logout('#{request.contextPath}')">Sair</a>
 				</span>
+				
+				<span id="menuSistema" style="position: absolute; right: 25px; top: 48px; width: 20px">
+					<a href="#" onclick="abrirMenupop();">
+						<h:graphicImage library="img" name="setabaixo.png" styleClass="bordaimagem" id="imgSetaBaixo"/>
+					</a>
+				</span>
 			</div>
 			
-		</div>	
+			<div id="menu">
+				<span id="iniciarmenu">
+					<h:graphicImage library="img" name="iconemenu.png" styleClass="bordaimagem" id="iconemenu">
+						Menu
+					</h:graphicImage>
+				</span>
+			</div>
+			
+			<div id="corpo" class="corpo">
+				<ui:insert name="corpo" />			
+			</div>
+			
+			<div id="menupop">
+				<sec:ifAnyGranted roles="MENSAGENS_ENVIAR_ACESSAR, ADMIN">
+					<p:commandLink actionListener="#{mensagemBeanView.novo}" value="Enviar mensagem" 
+					immediate="true" style="display:block" id="enviarMensagem" ajax="true" process="@this" 
+					onsuccess="enviarMsgDialog.show();">
+						<p:ajax immediate="true" listener="#{mensagemBeanView.novo}" />
+					</p:commandLink>
+				</sec:ifAnyGranted>
+				
+				<a href="#" onclick="alterarSenhaDialog.show();" style="display: block;" id="alterarSenha">
+					<span style="display: block;" id="spanAlterarSenha">Alterar Senha</span>
+				</a>
+			</div>
+			
+			<div id="barramenu">
+				<p:tieredMenu id="menuEsquerdo" style="width:185px; border: none; background: none; color:#000;">
+				
+					<p:menuitem value="Início" id="menuinicio" ajax="true" 
+					onclick="javascript:redirecionarPagina('#{request.contextPath}' , '/restrito/principal');"/>
+					
+					<p:menuitem onclick="javascript:logout('#{request.contextPath}');" value="Sair" id="menusair" ajax="true"/>
+				</p:tieredMenu>
+			</div>
+		</div>
+		
+		<p:dialog widgetVar="enviarMsgDialog" id="alterarMsgDialog" width="800" modal="true" resizable="false"
+		height="360" header="Enviar mensagem" appendToBody="false" dynamic="true">
+			DO TO
+		</p:dialog>
+		
+		<p:dialog widgetVar="alterarSenhaDialog" id="alterarSenhaDialog" width="240" modal="true" resizable="false" height="170"
+		header="Alterar Senha" dynamic="true" appendToBody="false">
+			DO TO
+		</p:dialog>
 	</h:body>
 </h:form>
-	
+<script type="text/javascript" charset="UTF-8">
+	carregarIdElementosPagina();
+</script>
 </sec:isAuthenticated>		
-		
-
 </html>
