Criando a tela de Cidades, Carregando combo-box do banco de dados, salvando cidade. v: 66 - 68 part 1-3

--- a/WebContent/templates/templatePrincipal.xhtml
+++ b/WebContent/templates/templatePrincipal.xhtml
@@ -101,7 +101,18 @@
 			
 			<div id="barramenu">
 				<p:tieredMenu id="menuEsquerdo" style="width:185px; border: none; background: none; color:#000;">
-				
+					
+					<sec:ifAnyGranted roles="CADASTRO_ACESSAR, ADMIN">
+						<p:submenu label="Cadastros" id="subMenuCadastro">
+							<sec:ifAnyGranted roles="CIDADE_ACESSAR, ADMIN">
+								<p:menuitem value="Cidade" id="menuCidade" action="/cadastro/cad_cidade.jsf?faces-redirect=true">
+																
+								</p:menuitem>
+							</sec:ifAnyGranted>
+						</p:submenu>
+						
+					</sec:ifAnyGranted>
+					
 					<p:menuitem value="Início" id="menuinicio" ajax="true" 
 					onclick="javascript:redirecionarPagina('#{request.contextPath}' , '/restrito/principal');"/>
 					
